(env
 (dev
  (flags
   (:standard -thread  -I +threads -o unix.cma -o threads.cma -g -safe-string
                    -linkall -warn-error -A -w -3-9-32-34-58)))
 (release
  (flags
   (:standard -thread  -I +threads -o unix.cma -o threads.cma -g -safe-string
                    -linkall -warn-error -A -w -3-9-32-34-58)))
 (test
  (flags
   (:standard -thread  -I +threads -o unix.cma -o threads.cma -g -safe-string
                    -linkall -warn-error -A -w -3-9-32-34-58)))
)

; (executable
;  (name REPL)
;  (public_name REPL)
;  (modules REPL)
;  (libraries CSharp.Lib))

(cram
  (deps ./REPL.exe %{bin:REPL}))
