; (executable
;  (name demoAO)
;  (modules demoAO)
;  (public_name demoAO)
;  (libraries c_sharp_lib))

; (executable
;  (name demoNO)
;  (modules demoNO)
;  (public_name demoNO)
;  (libraries c_sharp_lib))

; (executable
;  (name demoParse)
;  (modules demoParse)
;  (public_name demoParse)
;  (libraries c_sharp_lib))

; (cram
;  (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe))
