; (executable
;  (name demoAO)
;  (modules demoAO)
;  (public_name demoAO)
;  (libraries c_sharp_lib))

; (executable
;  (name demoNO)
;  (modules demoNO)
;  (public_name demoNO)
;  (libraries c_sharp_lib))

(executable
 (name demoParser)
 (modules demoParser)
 (public_name Demo.Parser)
 (libraries CSharp.Lib))

(cram
 (deps ./demoParser.exe))
