(env
 (dev
  (flags
   (:standard -thread  -I +threads -o unix.cma -o threads.cma -g -safe-string
                    -linkall -warn-error -A -w -3-9-32-34-58)))
 (release
  (flags
   (:standard -thread  -I +threads -o unix.cma -o threads.cma -g -safe-string
                    -linkall -warn-error -A -w -3-9-32-34-58)))
 (tests
  (flags
   (:standard -thread  -I +threads -o unix.cma -o threads.cma -g -safe-string
                    -linkall -warn-error -A -w -3-9-32-34-58)))
)

(library
 (name csharp_lib)
 (public_name CSharp.Lib)
 (modules 
  Ast 
  Parser
  Interpreter
  Interpreter_class
  Interpreter_tests 
  Parser_tests
  Tables)
 (libraries opal stdio ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
)
